<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neo_sick_s300-2</name>
  <version>1.0.0</version>
  <description>This package publishes a laser scan message out of a Sick S300 laser scanner using ROS-2.</description>

  <license>BSD</license>

  <url type="website">https://github.com/neobotix/neo_sick_s300</url>

  <maintainer email="ros@neobotix.de">Max Wittal</maintainer>
  <author email="wittal@neobotix.de">Max Wittal</author>
  <author email="padmanabhan@neobotix.de">Max Wittal</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>

</package>
